# agentic-debate

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  Requirements Document for a Debate application.docx  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: README.md
.github/workflows/: README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  dependencies.py  main.py
backend/app/api/: error_handlers.py  routes.py  schemas.py
backend/app/core/: config.py  errors.py
backend/app/domain/: enums.py  models.py
backend/app/orchestration/: __init__.py  debate_graph.py  llm_client.py
backend/app/repositories/: debate_repository.py
backend/app/services/: debate_service.py
backend/tests/: test_api.py  test_debate_graph.py
docs/: PROJECT_CONVERSATION_SUMMARY.md  README.md  SDLC_PROCESS.md
docs/agile/: BACKLOG.md  EPICS.md  TRACEABILITY.md  USER_STORIES.md
docs/design/: HIGH_LEVEL_ARCHITECTURE.md  LOW_LEVEL_API_DESIGN.md
docs/devsecops/: README.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/api/: debates.js
